goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <div class="container">
             <ul class="feature-section unstyle-list">
                 <li class="feature-list">
+                    <div class="feat-icon">
+                        <svg class="icon icon-antenna-1" width="64" height="64">
+                            <use xlink:href="./images/icon/advantage.svg#icon-antenna-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="feat-title">Strategy</h3>
                     <p class="feat-desc">
                         Our goal is to identify the business
@@ -47,6 +52,11 @@
                     </p>    
                 </li>
                 <li class="feature-list">
+                    <div class="feat-icon">
+                        <svg class="icon icon-clock-1" width="64" height="64">
+                            <use xlink:href="./images/icon/advantage.svg#icon-clock-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="feat-title">Punctuality</h3>
                     <p class="feat-desc">
                         Bring the key message to the 
@@ -55,6 +65,11 @@
                     </p>
                 </li>
                 <li class="feature-list">
+                    <div class="feat-icon">
+                        <svg class="icon icon-clock-1" width="64" height="64">
+                            <use xlink:href="./images/icon/advantage.svg#icon-clock-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="feat-title">Diligence</h3>
                     <p class="feat-desc">
                         Research and confirm brands that 
@@ -63,6 +78,11 @@
                     </p>
                 </li>
                 <li class="feature-list">
+                    <div class="feat-icon">
+                        <svg class="icon icon-clock-1" width="64" height="64">
+                            <use xlink:href="./images/icon/advantage.svg#icon-clock-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="feat-title">Technologies</h3>
                     <p class="feat-desc">
                         Design practice focused on digital 
@@ -100,6 +120,37 @@
                         <p class="card-text">
                             Product Designer
                         </p>
+                        <ul class="socmed-list list">
+                            <li>
+                                <a href="https://instagram.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-instagram-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://facebook.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://linkedin.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>    
+                        
                     </div>
                 </li>
                 <li>
@@ -109,15 +160,75 @@
                         <p class="card-text">
                             Frontend Developer
                         </p>
+                        <ul class="socmed-list list">
+                            <li>
+                                <a href="https://instagram.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-instagram-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://facebook.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://linkedin.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>    
                     </div>
                 </li>
                 <li>
                     <img src="./images/Our-team-3.jpg" alt="Camila's Photo" width="264" />
                     <div class="card-content">
                         <h3 class="card-title">Camila Garcia</h3>
-                        <p class="card-text">
+                        <p class="card-text">7
                             Marketing
                         </p>
+                        <ul class="socmed-list list">
+                            <li>
+                                <a href="https://instagram.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-instagram-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://facebook.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://linkedin.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>    
                     </div>
                 </li>
                 <li>
@@ -126,7 +237,38 @@
                         <h3 class="card-title">Daniel Wilson</h3>
                         <p class="card-text">
                         UI Designer
-                        </p>    
+                        </p>
+                        <ul class="socmed-list list">
+                            <li>
+                                <a href="https://instagram.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-instagram-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://facebook.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://linkedin.com/" class="socmed-icon">
+                                    <svg class="icon icon-socmed">
+                                        <use xlink:href="./images/icon/social-media.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>    
+
                     </div>
                 </li>
             </ul>
