goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </ul>
             </div>
         </section>
-        <section class="section section-attached">
+        <section class="section section-team">
             <div class="container">
             <h2 class="section-title">What Are We Doing</h2>
             <ul class="card unstyle-list centered-list">
