goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -274,15 +274,99 @@
             </ul>
             </div>
         </section>
+        <section class="section">
+            <div class="container">
+                <h2 class="section-title">Customers</h2>
+                <ul class="card list">
+                    <li>
+                        <a href="./" class="client-list">
+                            <svg class="icon icon-client">
+                                <use xlink:href="./images/icon/clients.svg#icon-client-1"></use>
+                            </svg>
+                        </a>
+                    </li> 
+                    <li>
+                         <a href="./" class="client-list">
+                            <svg class="icon icon-client">
+                                <use xlink:href="./images/icon/clients.svg#icon-client-2"></use>
+                            </svg>
+                        </a>
+                    </li> 
+                    <li>
+                        <a href="./" class="client-list">
+                            <svg class="icon icon-client">
+                                <use xlink:href="./images/icon/clients.svg#icon-client-3"></use>
+                            </svg>
+                        </a>
+                    </li> 
+                    <li>
+                        <a href="./" class="client-list">
+                            <svg class="icon icon-client">
+                                <use xlink:href="./images/icon/clients.svg#icon-client-4"></use>
+                            </svg>
+                        </a>
+                    </li> 
+                    <li>
+                        <a href="./" class="client-list">
+                            <svg class="icon icon-client">
+                                <use xlink:href="./images/icon/clients.svg#icon-client-5"></use>
+                            </svg>
+                        </a>
+                    </li> 
+                    <li>
+                        <a href="./" class="client-list">
+                            <svg class="icon icon-client">
+                                <use xlink:href="./images/icon/clients.svg#icon-client-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-        <div class="container">
-        <a href="./index.html" class="logo"><span class="logo-colored">web</span><span>studio</span></a><br>
-        <p class="footer-text">
-            Increase the flow of customers and<br>
-            sales for your business with digital<br>
-            marketing & growth solutions.
-        </p>
+        <div class="container container-footer">
+            <div class="footer-box">
+                <a href="./index.html" class="logo"><span class="logo-colored">web</span><span>studio</span></a>
+                <p>
+                    Increase the flow of customers and <br />
+                    sales for your business with digital <br />
+                    marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer-box">
+                <h3>Social media</h3>
+                <ul class="socmed-footer socmed-list list">
+                    <li>
+                        <a href="https://instagram.com/" class="socmed-icon">
+                            <svg class="icon icon-socmed">
+                                <use xlink:href="./images/icon/social-media.svg#icon-instagram-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/" class="socmed-icon">
+                            <svg class="icon icon-socmed">
+                                <use xlink:href="./images/icon/social-media.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com/" class="socmed-icon">
+                            <svg class="icon icon-socmed">
+                                <use xlink:href="./images/icon/social-media.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com/" class="socmed-icon">
+                            <svg class="icon icon-socmed">
+                                <use xlink:href="./images/icon/social-media.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>    
+            </div>
         </div>
     </footer>
 </body>
