--- a/portfolio.html
+++ b/portfolio.html
@@ -141,12 +141,48 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo"><span class="logo-colored">web</span><span>studio</span></a><br />
-            <p class="footer-text">Increase the flow of customers and<br>
-                sales for your business with digital<br>
-                marketing & growth solutions.
-            </p>
+        <div class="container container-footer">
+            <div class="footer-box">
+                <a href="./index.html" class="logo"><span class="logo-colored">web</span><span>studio</span></a>
+                <p>
+                    Increase the flow of customers and <br />
+                    sales for your business with digital <br />
+                    marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer-box">
+                <h3>Social media</h3>
+                <ul class="socmed-footer socmed-list list">
+                    <li>
+                        <a href="https://instagram.com/" class="socmed-icon">
+                            <svg class="icon icon-socmed">
+                                <use xlink:href="./images/icon/social-media.svg#icon-instagram-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/" class="socmed-icon">
+                            <svg class="icon icon-socmed">
+                                <use xlink:href="./images/icon/social-media.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com/" class="socmed-icon">
+                            <svg class="icon icon-socmed">
+                                <use xlink:href="./images/icon/social-media.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com/" class="socmed-icon">
+                            <svg class="icon icon-socmed">
+                                <use xlink:href="./images/icon/social-media.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>    
+            </div>
         </div>
     </footer>
 </body>
