goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </ul>
             </div>
         </section>
-        <section class="section section-team">
+        <section class="section section-attached">
             <div class="container">
             <h2 class="section-title">What Are We Doing</h2>
             <ul class="card unstyle-list centered-list">
@@ -196,7 +196,7 @@
                     <img src="./images/Our-team-3.jpg" alt="Camila's Photo" width="264" />
                     <div class="card-content">
                         <h3 class="card-title">Camila Garcia</h3>
-                        <p class="card-text">7
+                        <p class="card-text">
                             Marketing
                         </p>
                         <ul class="socmed-list list">
@@ -334,9 +334,9 @@
                     marketing & growth solutions.
                 </p>
             </div>
-            <div class="footer-box">
-                <h3>Social media</h3>
-                <ul class="socmed-footer socmed-list list">
+            <div>
+                <p class="footer-title">Social media</p>
+                <ul class="socmed-footer list">
                     <li>
                         <a href="https://instagram.com/" class="socmed-icon">
                             <svg class="icon icon-socmed">
