--- a/portfolio.html
+++ b/portfolio.html
@@ -55,15 +55,18 @@
                 </ul>
                 <ul class="project-card unstyle-list centered-list">
                     <li class="proj-cardlist">
-                        <img src="./images/project1.jpg" alt="Banking App Interface Concept" width="360">
+                        <a href="#" class="project-link link">
+                            <img src="./images/project1.jpg" alt="Banking App Interface Concept" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Banking App Interface Concept</h3>
                             <p>
                                 App
                             </p>
                         </div>
+                        </a>
                     </li>
                     <li class="proj-cardlist">
+                        <a href="#" class="project-link link">
                         <img src="./images/project2.jpg" alt="Cashless Payment" width="360">
 
                         <div class="proj-cardwrap">
@@ -72,8 +75,10 @@
                                 Marketing
                             </p>
                         </div>
+                        </a>
                     </li>
                     <li class="proj-cardlist">
+                        <a href="#" class="project-link link">
                         <img src="./images/project3.jpg" alt="Meditation App" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Meditation App</h3>
@@ -81,8 +86,10 @@
                                 App
                             </p>
                         </div>
+                        </a>
                     </li>
                     <li class="proj-cardlist">
+                        <a href="#" class="project-link link">
                         <img src="./images/project4.jpg" alt="Taxi Service" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Taxi Service</h3>
@@ -90,8 +97,10 @@
                                 Marketing
                             </p>
                         </div>
+                        </a>
                     </li>
                     <li class="proj-cardlist">
+                        <a href="#" class="project-link link">
                         <img src="./images/project5.jpg" alt="Screen Illustrations" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Screen Illustrations</h3>
@@ -99,8 +108,10 @@
                                 Design
                             </p>
                         </div>
+                        </a>
                     </li>
                     <li class="proj-cardlist">
+                        <a href="#" class="project-link link">
                         <img src="./images/project6.jpg" alt="Online Courses" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Online Courses</h3>
@@ -108,8 +119,10 @@
                                 Marketing
                             </p>
                         </div>
+                        </a>
                     </li>
                     <li class="proj-cardlist">
+                        <a href="#" class="project-link link">
                         <img src="./images/project7.jpg" alt="Instagram Stories Concept" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Instagram Stories Concept</h3>
@@ -117,8 +130,10 @@
                                 Design
                             </p>
                         </div>
+                        </a>
                     </li>
                     <li class="proj-cardlist">
+                        <a href="#" class="project-link link">
                         <img src="./images/project8.jpg" alt="Organic Food" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Organic Food</h3>
@@ -126,8 +141,10 @@
                                 Web Site
                             </p>
                         </div>
+                        </a>
                     </li>
                     <li class="proj-cardlist">
+                        <a href="#" class="project-link link">
                         <img src="./images/project9.jpg" alt="Fresh Coffee">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Fresh Coffee</h3>
@@ -135,6 +152,7 @@
                                 Web Site                
                             </p>
                         </div>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -151,7 +169,7 @@
                 </p>
             </div>
             <div class="footer-box">
-                <h3>Social media</h3>
+                <p class="footer-title">Social media</p>
                 <ul class="socmed-footer socmed-list list">
                     <li>
                         <a href="https://instagram.com/" class="socmed-icon">
