goit-markup-hw-04

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <div class="container">
             <ul class="feature-section unstyle-list">
                 <li class="feature-list">
-                    <div class="feat-icon">
-                        <svg class="icon icon-antenna-1" width="64" height="64">
-                            <use xlink:href="./images/icon/advantage.svg#icon-antenna-1"></use>
+                    <div class="icon">
+                        <svg class="antenna" width="64px" height="64px">
+                            <use href="./images/icons.svg#clock"></use>
                         </svg>
-                    </div>
+              </div>
                     <h3 class="feat-title">Strategy</h3>
                     <p class="feat-desc">
                         Our goal is to identify the business
@@ -53,8 +53,8 @@
                 </li>
                 <li class="feature-list">
                     <div class="feat-icon">
-                        <svg class="icon icon-clock-1" width="64" height="64">
-                            <use xlink:href="./images/icon/advantage.svg#icon-clock-1"></use>
+                        <svg class="antenna" width="64px" height="64px">
+                            <use href="./images/icons.svg#clock"></use>
                         </svg>
                     </div>
                     <h3 class="feat-title">Punctuality</h3>
@@ -66,8 +66,8 @@
                 </li>
                 <li class="feature-list">
                     <div class="feat-icon">
-                        <svg class="icon icon-clock-1" width="64" height="64">
-                            <use xlink:href="./images/icon/advantage.svg#icon-clock-1"></use>
+                        <svg class="antenna" width="64px" height="64px">
+                            <use href="./images/icons.svg#diagram"></use>
                         </svg>
                     </div>
                     <h3 class="feat-title">Diligence</h3>
@@ -79,8 +79,8 @@
                 </li>
                 <li class="feature-list">
                     <div class="feat-icon">
-                        <svg class="icon icon-clock-1" width="64" height="64">
-                            <use xlink:href="./images/icon/advantage.svg#icon-clock-1"></use>
+                        <svg class="antenna" width="64px" height="64px">
+                            <use href="./images/icons.svg#astronaut"></use>
                         </svg>
                     </div>
                     <h3 class="feat-title">Technologies</h3>
