goit-markup-hw-04

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,10 @@
 <html lang="en">
 
 <head>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-        <link rel="stylesheet" href="./css/styles.css" />
-        <title>My Homework #4</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>My Homework #4</title>
 </head>
 
 <body>
@@ -54,18 +54,15 @@
                 </ul>
                 <ul class="project-card unstyle-list centered-list">
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
-                            <img src="./images/project1.jpg" alt="Banking App Interface Concept" width="360">
+                        <img src="./images/project1.jpg" alt="Banking App Interface Concept" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Banking App Interface Concept</h3>
                             <p>
                                 App
                             </p>
                         </div>
-                        </a>
                     </li>
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
                         <img src="./images/project2.jpg" alt="Cashless Payment" width="360">
 
                         <div class="proj-cardwrap">
@@ -74,10 +71,8 @@
                                 Marketing
                             </p>
                         </div>
-                        </a>
                     </li>
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
                         <img src="./images/project3.jpg" alt="Meditation App" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Meditation App</h3>
@@ -85,10 +80,8 @@
                                 App
                             </p>
                         </div>
-                        </a>
                     </li>
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
                         <img src="./images/project4.jpg" alt="Taxi Service" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Taxi Service</h3>
@@ -96,10 +89,8 @@
                                 Marketing
                             </p>
                         </div>
-                        </a>
                     </li>
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
                         <img src="./images/project5.jpg" alt="Screen Illustrations" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Screen Illustrations</h3>
@@ -107,10 +98,8 @@
                                 Design
                             </p>
                         </div>
-                        </a>
                     </li>
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
                         <img src="./images/project6.jpg" alt="Online Courses" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Online Courses</h3>
@@ -118,10 +107,8 @@
                                 Marketing
                             </p>
                         </div>
-                        </a>
                     </li>
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
                         <img src="./images/project7.jpg" alt="Instagram Stories Concept" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Instagram Stories Concept</h3>
@@ -129,10 +116,8 @@
                                 Design
                             </p>
                         </div>
-                        </a>
                     </li>
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
                         <img src="./images/project8.jpg" alt="Organic Food" width="360">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Organic Food</h3>
@@ -140,10 +125,8 @@
                                 Web Site
                             </p>
                         </div>
-                        </a>
                     </li>
                     <li class="proj-cardlist">
-                        <a href="#" class="project-link link">
                         <img src="./images/project9.jpg" alt="Fresh Coffee">
                         <div class="proj-cardwrap">
                             <h3 class="project-card-title">Fresh Coffee</h3>
@@ -151,55 +134,18 @@
                                 Web Site                
                             </p>
                         </div>
-                        </a>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <div class="container container-footer">
-            <div class="footer-box">
-                <a href="./index.html" class="logo"><span class="logo-colored">web</span><span>studio</span></a>
-                <p>
-                    Increase the flow of customers and <br />
-                    sales for your business with digital <br />
-                    marketing & growth solutions.
-                </p>
-            </div>
-            <div class="footer-box">
-                <p class="footer-title">Social media</p>
-                <ul class="socmed-footer socmed-list list">
-                    <li>
-                        <a href="https://instagram.com/" class="socmed-icon">
-                            <svg class="icon icon-socmed">
-                                <use xlink:href="./images/icon/social-media.svg#icon-instagram-1"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/" class="socmed-icon">
-                            <svg class="icon icon-socmed">
-                                <use xlink:href="./images/icon/social-media.svg#icon-twitter-1"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://facebook.com/" class="socmed-icon">
-                            <svg class="icon icon-socmed">
-                                <use xlink:href="./images/icon/social-media.svg#icon-facebook-1"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://linkedin.com/" class="socmed-icon">
-                            <svg class="icon icon-socmed">
-                                <use xlink:href="./images/icon/social-media.svg#icon-linkedin-1"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>    
-            </div>
+        <div class="container">
+            <a href="./index.html" class="logo"><span class="logo-colored">web</span><span>studio</span></a><br />
+            <p class="footer-text">Increase the flow of customers and<br>
+                sales for your business with digital<br>
+                marketing & growth solutions.
+            </p>
         </div>
     </footer>
 </body>
